# GhostEscape

./: CMakeLists.txt  readme.md
affiliate/: Collider.cpp  SpriteAnim.h
assets/data/: credits.txt
core/: Actor.cpp  Actor.h  AssetStore.cpp  AssetStore.h  Game.cpp  Game.h  Object.cpp  Object.h  ObjectAffiliate.h  ObjectWorld.cpp  ObjectWorld.h  Scene.cpp
raw/: Status.h
src/: Enemy.cpp  Enemy.h  Player.cpp  Player.h  SceneMain.cpp  SceneMain.h  SceneTitle.cpp  SceneTitle.h  Spawner.cpp  Spawner.h  WeaponThunder.cpp  WeaponThunder.h  main.cpp
src/affiliate/: AffiliateBar.cpp  AffiliateBar.h  Collider.cpp  Collider.h  Sprite.cpp  Sprite.h  SpriteAnim.cpp  TextLabel.cpp  TextLabel.h
src/core/: Actor.cpp  Actor.h  Game.cpp  Game.h  Object.cpp  Object.h  ObjectAffiliate.cpp  ObjectAffiliate.h  ObjectScreen.h  ObjectWorld.h  Scene.cpp  Scene.h  Timer.cpp  Timer.h  defs.h
src/raw/: BGStar.cpp  BGStar.h  Status.cpp  Status.h  Weapon.cpp  Weapon.h
src/screen/: HUD_Button.cpp  HUD_Button.h  HUD_Skill.cpp  HUD_Skill.h  HUD_Status.cpp  HUD_Status.h  HUD_Text.cpp  HUD_Text.h  UI_Mouse.cpp  UI_Mouse.h
src/world/: Effect.cpp  Effect.h  Spell.cpp  Spell.h
world/: Effect.cpp  Effect.h
